# CLI-Game

./: CLI-Game.sln  CMakeLists.txt  README.md
CLI-Game/: CLI-Game.vcxproj  CLI-Game.vcxproj.filters
CLI-Game/docs/: Input.md  Screen.md
CLI-Game/src/: Character.cpp  Character.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Render.cpp  Render.h  main.cpp
docs/: Entity.md  Render.md  Template.md
src/: main.cpp
src/Assets/: Ship.aaf
src/CLGEngine/: CMakeLists.txt  Collider.cpp  Collider.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Input.cpp  Input.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  MapData.h  TileMap.cpp  TileMap.h  Time.cpp  Time.h
src/CLGEngine/CORE/: CMakeLists.txt  Component.h  ConsoleWindow.cpp  ConsoleWindow.h  IObserver.h  ISubject.h  MainWindow.cpp  MainWindow.h  Rect.h  Text.txt  Utility.h  Vector2.h
src/CLGEngine/Component/: BlockRenderer.cpp  BlockRenderer.h  CMakeLists.txt  Collider.cpp  Component.h  Render.cpp  Render.h
src/CLGEngine/Components/: CMakeLists.txt  Collider.cpp  Collider.h
src/CLGEngine/Components/Renderers/: BlockRenderer.cpp  BlockRenderer.h  CMakeLists.txt  CharMapRenderer.cpp  CharMapRenderer.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h
src/CLGEngine/Debugging/: CMakeLists.txt  Debugger.h
src/CLGEngine/Graphics/: ASCII.h  Block.cpp  Block.h  CMakeLists.txt  Color.h  Render.cpp  Render.h  Screen.cpp  Screen.h  TextRenderer.cpp  TextRenderer.h
src/Game/: CMakeLists.txt  Character.cpp  Character.h  GameManager.cpp  GameManager.h  Level.cpp  Level.h  (+14 more)
(+38 files in other folders)
